Java 11 support: replacing javax.xml.bind import with an equivalent